<resources>
    <string name="app_name">Jobee</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_logout">Log out</string>
    <string name="job_seeker">Job Seeker</string>
    <string name="recruiter">Recruiter</string>
    <string name="user_name">UserName</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>

    <string name="repeat_password_lable">Repeat</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email company is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="home">Home</string>
    <string name="resume">Resume</string>
    <string name="job_list">Job List</string>
    <string name="applied_jobs">Applied Jobs</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="save_changes">Save changes</string>
    <string name="company">Company</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Switch">Switch</string>
    <string name="add_new_resume">Add new resume</string>
    <string name="add_new_category">Add new category</string>
    <string name="delete_this_resume">Delete this resume</string>
    <string name="opening_list">Opening List</string>
    <string name="review_resume">Review Resume</string>
    <string name="scheduled_interview">Scheduled Interview</string>
    <string name="major">Major</string>
    <string name="weed_out">Weed Out</string>
    <string name="decide_later">Decide Later</string>
    <string name="accepted">Provide offer</string>
    <string name="schedule_interview">Schedule Interview</string>
    <string name="login_error">Login error!</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="login_with_rosefire">Login with rosefire</string>
    <string name="get_verified_address">Update to verified address</string>
    <string name="invalid_address">invalid address</string>
    <string name="no_internet">No internet connection, cannot verify address</string>
    <string name="empty_address">address can\'t be empty</string>
    <string name="add_new_opening">Add new opening</string>
    <string name="scan_resume_toast">Scanned resume, added to review section</string>
    <string name="resume_scan_cancelled">Resume scan cancelled</string>
    <string name="resume_scanned">Resume scanned</string>
    <string name="hello">"Hello, \n%s"</string>
    <string name="edit_resume_name">Edit resume name</string>
    <string name="update_submission">Update Submission</string>
    <string name="notif_offer_title">Offer</string>
    <string name="notif_offer_body">%s gives you a offer!</string>
    <string name="notif_reject_title">Reject</string>
    <string name="notif_reject_body">Sorry, %s rejected you</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="notif_accept_offer_title">Acceptance</string>
    <string name="notif_accept_offer_body">%s accepted your offer!</string>
    <string name="notif_decline_offer_title">Decline</string>
    <string name="notif_decline_offer_body">Sorry, %s can\'t take your offer</string>
    <string name="re_delete_message">Job %s deleted</string>
</resources>
