<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/re_action_weed_out"
        android:orderInCategory="100"
        android:title="@string/weed_out"
        android:icon="@drawable/ic_menu_slideshow"
        app:showAsAction="never" />

    <item
        android:id="@+id/re_action_decide_later"
        android:orderInCategory="100"
        android:title="@string/decide_later"
        android:icon="@drawable/ic_add"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/re_action_offer"
        android:orderInCategory="100"
        android:title="@string/accepted"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="never">
    </item>


</menu>
